# transfer-money

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/app/service/: AccountApi.h
include/domain/model/account/: Account.h  AccountInfo.h  AccountRepo.h  Balance.h  MoneyCollector.h  MoneyDest.h  MoneySrc.h  Phone.h
include/domain/model/base/: AggregateRoot.h  Entity.h  Role.h  ValueObject.h
include/domain/model/comm-role/: AccountInfo.h  MoneyDest.h  MoneySrc.h
include/domain/model/local-account/: Balance.h  LocalAccount.h  LocalAccountRepo.h  LocalMoneyDest.h  LocalMoneySrc.h  MoneyCollector.h  Phone.h
include/domain/model/remote-account/: RemoteAccount.h  RemoteAccountProvider.h  RemoteMoneyDest.h  RemoteMoneySrc.h
include/domain/service/: AccountService.h  TransferMoneyFromRemoteService.h  TransferMoneyService.h  TransferMoneyToLocalService.h  TransferMoneyToRemoteService.h  WithdrawMoneyService.h
include/pub/base/: Keywords.h  NullPtr.h  Types.h
include/pub/log/: ConsoleState.h  log.h
src/app/service/: AccountApi.cpp
src/domain/model/account/: Account.cpp  AccountInfo.cpp  AccountRepo.cpp  Balance.cpp  MoneyCollector.cpp  MoneyDest.cpp  MoneySrc.cpp  Phone.cpp
src/domain/model/base/: AggregateRoot.cpp  (+1 more)
src/domain/service/: AccountService.cpp  TransferMoneyFromRemoteService.cpp  TransferMoneyService.cpp  TransferMoneyToLocalService.cpp  TransferMoneyToRemoteService.cpp  WithdrawMoneyService.cpp
src/infra/repositories/: AccountRepoImpl.cpp  LocalAccountRepoImpl.cpp
src/pub/log/: ConsoleState.cpp  log.cpp
test/: TestAccount.cpp
(+12 files in other folders)
